server/compilers/goLiteJS/src/test/ml1/invalid/struct4.go
// missing right bracket in struct declaration
package main

type point struct {
        x, y, z int
